# wayfinder-bot

./: Cargo.toml  README.md
migrations/2023-11-02-130610_accessories/: down.sql  up.sql
migrations/2023-11-03-090309_accessory_levels/: down.sql  up.sql
src/: commands.rs  db.rs  lib.rs  main.rs  models.rs  schema.rs
