[package]
name = "wayfinder-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version="2.1.3", features=["postgres"]}
dotenv = "0.15.0"
env_logger = "0.10.0"
poise = "0.5.7"
reqwest = {version="0.11.22", features=["blocking"]}
scraper = "0.18.1"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"


[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
features = ["framework", "standard_framework"]
